Fix spacing issue with html4 output
The toctree wrapper can exist outside a section on html4 output. This
resolve #1201, a bug introduced with docutils 0.17 support.

--- a/src/sass/_theme_rst.sass
+++ b/src/sass/_theme_rst.sass
@@ -152,8 +152,12 @@
       background: transparent !important
       border-color: rgba(0, 0, 0, 0.1) !important
 
+  // TOC wrapper can be outside a section
+  .toctree-wrapper ul
+    @extend .wy-plain-list-disc
+
   .section, section
-    ul, .toctree-wrapper ul
+    ul
       @extend .wy-plain-list-disc
     ol.loweralpha, ol.loweralpha > li
       list-style: lower-alpha
